ESERCIZI/ES008-NET/01-PodNetwork/S04-Services.yaml
# Creazione dei servizi per le VM dell'app e del database
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: corso
spec:
  selector:
    tier: web
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: corso
spec:
  selector:
    tier: app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: corso
spec:
  selector:
    tier: db
  ports:
  - name: pg
    port: 5432
    targetPort: 5432
---
# Il tipo di service è headless (senza cluster IP)
apiVersion: v1
kind: Service
metadata:
  name: stack
  namespace: corso
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/part-of: stack-demo
