ESERCIZI/ES008-NET/01-PodNetwork/S05-Net-Policy-with-route.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: corso
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/part-of: stack-demo
  policyTypes: [Ingress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web
  namespace: corso
spec:
  podSelector:
    matchLabels:
      tier: web
  policyTypes: [Ingress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-from-web
  namespace: corso
spec:
  podSelector:
    matchLabels:
      tier: app
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: web
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-from-app
  namespace: corso
spec:
  podSelector:
    matchLabels:
      tier: db
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: app
    ports:
    - protocol: TCP
      port: 5432
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: corso
spec:
  to:
    kind: Service
    name: web
  port:
    targetPort: http
